/*
 * Copyright 2021 IBM Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy
 * of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";
package mmesh;

option java_package = "com.ibm.watson.modelmesh.example.api";

// This is an example of a custom (service-specific) API for exposing models
// through the model-mesh framework..

service ExamplePredictor {
    rpc predict (PredictRequest) returns (PredictResponse) {}

    rpc multiPredict (PredictRequest) returns (MultiPredictResponse) {}
}

message PredictRequest {
    string modelName = 1;
    string text = 2;
}

message PredictResponse {
    repeated CategoryAndConfidence results = 1;
}

message MultiPredictResponse {
    map<string,PredictResponse> perModelResults = 1;
}

message CategoryAndConfidence {
    string category = 1;
    float confidence = 2;
}
